--- a/app/src/main/res/layout/activity_admin_create_user.xml
+++ b/app/src/main/res/layout/activity_admin_create_user.xml
@@ -182,7 +182,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:padding="12dp"
-                android:text="Create User (Admin)"
+                android:text="Create User"
                 android:textSize="16sp"
                 android:visibility="gone" />
 
