--- a/app/src/main/res/layout/activity_create_user_profile.xml
+++ b/app/src/main/res/layout/activity_create_user_profile.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
@@ -49,26 +48,23 @@
             android:orientation="vertical"
             android:padding="24dp">
 
-            <!-- Spinner wrapped in TextInputLayout for consistent styling -->
+            <!-- START: THIS IS THE CORRECTED BLOCK -->
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/accountSpinnerLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Select User Account">
+                android:layout_marginTop="16dp"
+                android:hint="Type to search user by email">  <!-- FIX: The hint is now on the parent layout -->
 
                 <AutoCompleteTextView
                     android:id="@+id/spinnerUserAccount"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="none"
-                    />
+                    android:inputType="textEmailAddress"
+                    android:padding="16dp"/> <!-- The hint has been removed from here -->
 
             </com.google.android.material.textfield.TextInputLayout>
-
-
-
-
+            <!-- END: CORRECTION COMPLETE -->
 
             <!-- Full Name Input -->
             <com.google.android.material.textfield.TextInputLayout
