--- a/app/src/main/res/layout/activity_match_history.xml
+++ b/app/src/main/res/layout/activity_match_history.xml
@@ -88,6 +88,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/pin_my_request_item"/>
+        
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            tools:visibility="visible" />
 
         <TextView
             android:id="@+id/tv_no_history"
