--- a/app/src/main/res/layout/activity_edit_help_request.xml
+++ b/app/src/main/res/layout/activity_edit_help_request.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -27,17 +28,21 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <!-- Request Type Input -->
+            <!-- START: MODIFIED Request Type Input -->
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:id="@+id/tilEditRequestType"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Request Type">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etEditRequestType"
+
+                <AutoCompleteTextView
+                    android:id="@+id/actvEditRequestType"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:inputType="none" />
             </com.google.android.material.textfield.TextInputLayout>
+            <!-- END: MODIFIED Request Type Input -->
 
             <!-- Description Input -->
             <com.google.android.material.textfield.TextInputLayout
@@ -69,7 +74,7 @@
                     android:focusable="false" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- FIX: Added Location Input -->
+            <!-- Location Input -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -82,7 +87,7 @@
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- FIX: Added Urgency Level Dropdown -->
+            <!-- Urgency Level Dropdown -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
