Update 15. ensured that PIN is also able to delete and release the request from their side if csr does not respond and is MIA. also ensured that csr is able to just search through the filters easily

--- a/app/src/main/res/layout/activity_create_request.xml
+++ b/app/src/main/res/layout/activity_create_request.xml
@@ -96,20 +96,24 @@
                     android:longClickable="false" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Phone Number Input -->
+            <!-- In activity_create_help_request.xml -->
+
             <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:hint="Contact Phone Number">
+                android:layout_marginTop="16dp"
+                android:hint="Region">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/etPhoneNumber"
+                <AutoCompleteTextView
+                    android:id="@+id/spinnerRegion"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="phone" />
+                    android:inputType="none"
+                    android:text="Anywhere" /> <!-- Optional: set a default value -->
+
             </com.google.android.material.textfield.TextInputLayout>
+
 
             <!-- Urgency Level Dropdown -->
             <com.google.android.material.textfield.TextInputLayout
